--- a/cards/templates/cards/card.html
+++ b/cards/templates/cards/card.html
@@ -1,4 +1,9 @@
 <article>
     <h4>{{ card.question }}</h4>
     <p>{{ card.answer }}</p>
+    <hr>
+    <!-- The card.id is passed as a parameter,due to the <int:pk> pattern in the route to the card-update URL in cards/urls.py.  -->
+    <a href="{% url 'card-update' card.id %}" role="button">
+        Edit Card
+    </a>
 </article>
