Add move functionality when card is guessed or not

--- a/cards/templates/cards/card.html
+++ b/cards/templates/cards/card.html
@@ -4,6 +4,6 @@
     <hr>
     <!-- The card.id is passed as a parameter,due to the <int:pk> pattern in the route to the card-update URL in cards/urls.py.  -->
     <a href="{% url 'card-update' card.id %}" role="button">
-        Edit Card
+        ✏️ Edit Card
     </a>
 </article>
