--- a/cards/templates/cards/card_form.html
+++ b/cards/templates/cards/card_form.html
@@ -4,7 +4,7 @@
 <!-- If the card_form.html template receives card data, then the Edit Card headline is shown.
 Otherwise, the Create New Card is displayed. -->
     {% if card %}
-        <h2>Edit Card</h2>
+        <h2>✏️ Edit Card</h2>
     {% else %}
         <h2>Create New Card</h2>
     {% endif %}
