--- a/cards/templates/cards/card_list.html
+++ b/cards/templates/cards/card_list.html
@@ -3,15 +3,15 @@
 
 {% block content %}
     <h2>
-        All Cards
+        📒 All Cards
     </h2>
     <a href="{% url 'card-create' %}" role="button">
-        Create New Card
+        ✏️ Create New Card
     </a>
     {% for card in card_list %}  <!-- looping through all your cards -->
         {% ifchanged %}     <!-- showing the box number once, then all the cards in the box. Only when the next box is
         reached and the headline changes is the new headline shown. -->
-        <h3> {{ card.box | ordinal }} Box</h3>  <!--  using the pipe symbol (|) to apply the ordinal filter of the humanize filter set -->
+        <h3>🗒️ {{ card.box | ordinal }} Box</h3>  <!--  using the pipe symbol (|) to apply the ordinal filter of the humanize filter set -->
         {% endifchanged %}
         {% include "cards/card.html" %}  <!-- load a subtemplate named card.html -->
     {% endfor %}
