--- a/cards/templates/cards/navigation.html
+++ b/cards/templates/cards/navigation.html
@@ -1,3 +1,6 @@
+{% load cards_tags %}   <!-- load your card_tags template tags -->
+
 <nav>
-    <a href="{% url 'card-list' %}">All Cards</a>
+    <a href="{% url 'card-list' %}">🗂 All Cards</a>
+    {% boxes_as_links %}    <!-- include the boxes_as_links tag -->
 </nav>
